# mds2022

./: Bug_analysis_binary_search_algo.ipynb  CONTRIBUTING.md  Calculus_Gradient_Descent_Lab.html  LinAlg_Gram_Schmidt.ipynb  LinAlg_MNIST_digits_recognition.ipynb  README.md  index.html
Algorithms/: Binary Search Time Complexity.ipynb
Apache Spark/: README.md  sga-task_DF.ipynb  sga-task_DF_Batyrov.ipynb  sga-task_RDD_Batyrov.ipynb  sga-task_SQL.ipynb  sga-task_SQL_Batyrov.ipynb  solution_sql.tsv
Calculus/: Gradient Descent.ipynb  Numerical Differentiation.ipynb  Numerical Integration.ipynb
Computer Vision/: Computer Vision Food101 classification.ipynb  Project_Description_Batyrov.ipynb  README.md
Cpp/: README.md  main.cpp  ringbuf.hpp
Cpp/Final/: CMakeLists.txt  README.md  employees.csv
Cpp/Final/include/: printers.hpp  record.hpp  register.hpp
Cpp/Final/src/: main.cpp  record.cpp  register.cpp
Cpp/Stage7/: CMakeLists.txt  README.md
Cpp/Stage7/include/: ringbuf.hpp
Data Scraping/: README.md  imdb_code.py  imdb_helper_functions.py  report.ipynb
Deep Learning/: Computer Vision Food101 classification.ipynb  DL_Week6_Final_Batyrov_NLP.ipynb  Natural Language Processing binary classification.ipynb  README.md
Discrete Math/: rand_graph_lib.c
LR in Bash/: README.md  fit.sh  predict.sh
ML/: ML_Week6_Final_Batyrov.ipynb  README.md  Regression.ipynb  project_description-checkpoint_Batyrov.ipynb
Machine Learning/: IMDB Regression.ipynb  README.md
Natural Language Processing/: BoolQ_classification.ipynb  README.md
Probability Theory/: MCMC.ipynb
(+69 files in other folders)
